--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://static.vecteezy.com/system/resources/previews/042/156/714/non_2x/coding-icon-in-trendy-outline-style-isolated-on-white-background-coding-silhouette-symbol-for-your-website-design-logo-app-ui-illustration-eps10-free-vector.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Code-Sandbox</title>
 </head>
